ks-component-ts/src/styles/library.css
/* ... */
.mb-2\.5 {
  margin-bottom: 10px;
}

.mt-2\.5 {
  margin-top: 10px;
}

.mb-16 {
  margin-bottom: 64px;
}

.ml-12 {
  margin-left: 48px;
}

.ml-2\.5 {
  margin-left: 10px;
}

.mt-12 {
  margin-top: 48px;
}

.-ml-8 {
  margin-left: -32px;
}

.ml-8 {
  margin-left: 32px;
}

.ml-1 {
  margin-left: 4px;
}

.mt-0\.5 {
  margin-top: 2px;
}

.mt-0 {
  margin-top: 0;
}

.mr-0\.5 {
  margin-right: 2px;
}

.mr-0 {
  margin-right: 0;
}

.mt-1\.5 {
  margin-top: 6px;
}

.mb-1\.5 {
  margin-bottom: 6px;
}

.mt-8 {
  margin-top: 32px;
}

.mr-auto {
  margin-right: auto;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.inline {
  display: inline;
}

.flex {
  display: flex;
}

.inline-flex {
  display: inline-flex;
}

.table {
  display: table;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-screen {
  height: 100vh;
}

@supports (-webkit-touch-callout: none) {

  .h-screen {
    height: -webkit-fill-available;
  }
}

.h-9 {
  height: 36px;
}

.h-1 {
  height: 4px;
}

.h-5 {
  height: 20px;
}

.h-full {
  height: 100%;
}

.h-table {
  height: 696px;
}

.h-2 {
  height: 8px;
}

.h-6 {
  height: 24px;
}

.h-4\.5 {
  height: 18px;
}

.h-4 {
  height: 16px;
}

.h-3\.5 {
  height: 14px;
}

.h-3 {
  height: 12px;
}

.h-14 {
  height: 56px;
}

.h-16 {
  height: 64px;
}

.h-12 {
  height: 48px;
}

.h-5\/6 {
  height: 83.333333%;
}

.h-10 {
  height: 40px;
}

.h-80 {
  height: 320px;
}

.h-8 {
  height: 32px;
}

.h-52 {
  height: 208px;
}

.h-0\.75 {
  height: 3px;
}

.h-0 {
  height: 0;
}

.h-60 {
  height: 240px;
}

.h-px {
  height: 1px;
}

.h-7\.75 {
  height: 31px;
}

.h-7 {
  height: 28px;
}

.h-5\.25 {
  height: 21px;
}

.h-2\/6 {
  height: 33.333333%;
}

.h-2\/3 {
  height: 66.666667%;
}

.h-1\.5 {
  height: 6px;
}

.max-h-32 {
  max-height: 128px;
}

.max-h-16 {
  max-height: 64px;
}

.max-h-38 {
  max-height: 152px;
}

.max-h-64 {
  max-height: 256px;
}

.min-h-20 {
  min-height: 80px;
}

.min-h-28 {
  min-height: 112px;
}

.min-h-full {
  min-height: 100%;
}

.w-screen {
  width: 100vw;
}

.w-full {
  width: 100%;
}

.w-2\/6 {
  width: 33.333333%;
}

.w-16 {
  width: 64px;
}

.w-5 {
  width: 20px;
}

.w-2 {
  width: 8px;
}

.w-6 {
  width: 24px;
}

.w-11 {
  width: 44px;
}

.w-4\.5 {
  width: 18px;
}

.w-4 {
  width: 16px;
}

.w-9 {
  width: 36px;
}

.w-3\.5 {
  width: 14px;
}

.w-3 {
  width: 12px;
}

.w-auto {
  width: auto;
}

.w-1\/6 {
  width: 16.666667%;
}

.w-48 {
  width: 192px;
}

.w-px {
  width: 1px;
}

.w-0\.5 {
  width: 2px;
}

.w-0 {
  width: 0;
}

.w-10 {
  width: 40px;
}

.w-32 {
  width: 128px;
}

.w-1\/2 {
  width: 50%;
}

.w-5\/6 {
  width: 83.333333%;
}

.w-1\/3 {
  width: 33.333333%;
}

.w-1 {
  width: 4px;
}

.w-0\.75 {
  width: 3px;
}

.w-64 {
  width: 256px;
}

.w-12 {
  width: 48px;
}

.w-8 {
  width: 32px;
}

.w-120 {
  width: 480px;
}

.min-w-max {
  min-width: -moz-max-content;
  min-width: max-content;
}

.min-w-10 {
  min-width: 40px;
}

.min-w-16 {
  min-width: 64px;
}

.min-w-54 {
  min-width: 216px;
}

.min-w-0 {
  min-width: 0;
}

.min-w-6 {
  min-width: 24px;
}

.min-w-36 {
  min-width: 144px;
}

.min-w-8 {
  min-width: 32px;
}

.max-w-120 {
  max-width: 480px;
}

.max-w-80 {
  max-width: 320px;
}

.max-w-5xl {
  max-width: 64rem;
}

.max-w-screen-lg {
  max-width: 1024px;
}

.max-w-7xl {
  max-width: 80rem;
}

.max-w-sm {
  max-width: 24rem;
}

.max-w-full {
  max-width: 100%;
}

.flex-1 {
  flex: 1 1 0%;
}

.flex-initial {
  flex: 0 1 auto;
}

.shrink {
  flex-shrink: 1;
}

.basis-1\/3 {
  flex-basis: 33.333333%;
}

.basis-2\/3 {
  flex-basis: 66.666667%;
}

.origin-0 {
  transform-origin: 0%;
}

.origin-full {
  transform-origin: 100%;
}

.-translate-x-full {
  --tw-translate-x: -100%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-x-1\/2 {
  --tw-translate-x: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-y-1\/2 {
  --tw-translate-y: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.rotate-180 {
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.skew-y-slide-up {
  --tw-skew-y: -3.75deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-scale-x-1 {
  --tw-scale-x: -1;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform-gpu {
  transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.animate-spin {
  animation: spin 1s linear infinite;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.animate-fade-in {
  animation: fade-in 200ms ease-in-out;
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.animate-fade-out {
  animation: fade-out 200ms ease-in-out;
}
/* ... */

